--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,14 @@
 	</header>
 	<main>
 		<h1>lived experiences project title</h1>
-		<p>blah, blah, blah...</p>
+		<p>The purpose of the video was to show that there are people that care about you whether you know it or not and suicide is never the answer no matter how bad things are because there are people that support you- things will get better even though there may seem like no other way out at the time.</p> 
+
+<p>The video attempts to achieve its purpose by having the author of the letter, who has a first-hand experience to the situation, talk on screen which adds emotion to the video and kind of makes the audience feel bad, think and listen more.</p> 
+
+<p>The structure of the message was effective because the author didn’t come right out and tell the audience that his uncle committed suicide. He talks more about his personal experience in his mother’s face when she talked about him and how he is gay throughout the whole thing while making the video sound like a personal story instead of a letter being read out loud.</p> 
+
+<p>The structure of this video can help to write the Lived Experience project since it did a good job of creating a personal experience and didn’t make it sound like a writing. The video sounded like it was coming from the author just telling a story and didn’t sound like he had written it before and was reading it out loud to the audience.</p> 
+
 	</main>
 	<footer>
 		<p>&copy; 2013 [Name goes here]</p>
