--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 		<h1>my portfolio</h1>
 		<ul id="nav">
 			<li><a href="index.html">home</a></li>
-			<li><a href="lived.html">lived <br />experiences</a></li>
+			<li><a href="lived.html">lived <br />experiences</br></a></li>
 			<li><a href="#">cultural <br />analysis</a></li>
 			<li><a href="#">formal <br />research</a></li>
 			<li><a href="#">remix</a></li>
