--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h1>myportfolio</h1>
 		<ul id="nav">
 			<li><a href="index.html">home</a></li>
-			<li><a href="lived.html">lived <br />experiences</a></li>
+			<li><a href="lived.html">lived <br />experiences</br></a></li>
 			<li><a href="#">cultural <br />analysis</a></li>
 			<li><a href="#">formal <br />research</a></li>
 			<li><a href="#">remix</a></li>
