--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
 
 <p>The structure of this video can help to write the Lived Experience project since it did a good job of creating a personal experience and didn’t make it sound like a writing. The video sounded like it was coming from the author just telling a story and didn’t sound like he had written it before and was reading it out loud to the audience.</p> 
 
-
+<p>THE SOCIAL NETWORK</p> 
 <p>There is a positive correlation between formal education and economic and personal success. If someone has a higher level of education, they are more likely to be successful and therefore have more economic success. The same applies in a negative way; if someone has a low level of education, the probability of him or her having a high pay and is low. While there are always exceptions, the majority of human beings will not have economic success in today’s economy unless they are willing to put in the work to succeed in the educational aspect of life. Some people are able to get away with a lower level of education and still have high financial such as professional athletes or lottery winners and likewise, there are people who put in effort to have a high level education but still do not necessarily have the economic success that they may like if there are not jobs available in their field.</p>  
 
 	</main>
