--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 			<li><a href="blog.html">blog</a></li>
 		</ul>
 	</header>
-	<main>In Class Activities</h1>
+	<main></h1>In Class Activities</h1>
 		<p>The purpose of the video was to show that there are people that care about you whether you know it or not and suicide is never the answer no matter how bad things are because there are people that support you- things will get better even though there may seem like no other way out at the time.</p> 
 
 <p>The video attempts to achieve its purpose by having the author of the letter, who has a first-hand experience to the situation, talk on screen which adds emotion to the video and kind of makes the audience feel bad, think and listen more.</p> 
@@ -28,8 +28,8 @@
 
 <p>The structure of this video can help to write the Lived Experience project since it did a good job of creating a personal experience and didn’t make it sound like a writing. The video sounded like it was coming from the author just telling a story and didn’t sound like he had written it before and was reading it out loud to the audience.</p> 
 
-<p>THE SOCIAL NETWORK</p> 
-<p>There is a positive correlation between formal education and economic and personal success. If someone has a higher level of education, they are more likely to be successful and therefore have more economic success. The same applies in a negative way; if someone has a low level of education, the probability of him or her having a high pay and is low. While there are always exceptions, the majority of human beings will not have economic success in today’s economy unless they are willing to put in the work to succeed in the educational aspect of life. Some people are able to get away with a lower level of education and still have high financial such as professional athletes or lottery winners and likewise, there are people who put in effort to have a high level education but still do not necessarily have the economic success that they may like if there are not jobs available in their field.</p>  
+
+<p>(THE SOCIAL NETWORK)There is a positive correlation between formal education and economic and personal success. If someone has a higher level of education, they are more likely to be successful and therefore have more economic success. The same applies in a negative way; if someone has a low level of education, the probability of him or her having a high pay and is low. While there are always exceptions, the majority of human beings will not have economic success in today’s economy unless they are willing to put in the work to succeed in the educational aspect of life. Some people are able to get away with a lower level of education and still have high financial such as professional athletes or lottery winners and likewise, there are people who put in effort to have a high level education but still do not necessarily have the economic success that they may like if there are not jobs available in their field.</p>  
 
 	</main>
 	<footer>
