--- a/cultural6.html
+++ b/cultural6.html
@@ -33,7 +33,7 @@
 		</div>
 		<article>
 			<h1>Anticipated Effects</h1>
-			<p>Anticipated Effects go here</p>
+			<p>If the whole country legalized gay marriage, it would cause people to be more accepting and allow everybody to marry the one they love. Also by allowing gay marriage in every state, since it would be more common and more accepted, hate crimes toward homosexuals would be reduced. Many people look forward to getting married all through out their lives, and since marriage is a civil right for all Americans, people should not be denied this possibility. Today, about 40% of marriages end in a divorce (Divorce Rates, 2013). There is a possibility that some of these marriages ended because they did not marry the person they actually loved, meaning they married someone of the opposite sex when they are really in love with someone of the same sex in order to get the benefits, or because they are too scared to “come out.” I have heard of at least three couples who have gotten divorced and one of the people has ended up with a different partner of the same sex. If I have heard of that happening to more than one couple, how common is it really? If gay marriage is legalized throughout the country, there is a large chance that divorce rates will decrease because people do not feel pressured to marry someone of the opposite sex and they will be more comfortable to marry one of the same sex since there is no lesser benefits, and it is more common and accepted. Legalizing gay marriage has no effect on the heterosexual couples. By allowing gay marriage, the only thing changing in the country is the ability for everyone to marry whom he or she loves.</p>
 		</article>
 		<footer>
 		<p>&copy; 2013 [Name goes here]</p>
