--- a/formal2.html
+++ b/formal2.html
@@ -33,7 +33,7 @@
 		</div>
 		<article>
 			<h1>Introduction</h1>
-			<p>Introduction goes here</p>
+			<p>In animal science, the writing and reading required applies to the “quality not quantity” statement. This is because there is not a large amount of writing and reading that is necessary in the field but what is written is important. The information that is given throughout the field is necessary to the health of an animal and therefore relies on quality of the notes on papers. Research within the field is mostly kept for the ones who choose to study in the lab and do the research to pass the information along to others. Everybody in the field however, needs to be aware of the new research being done because it is meant to update vaccinations and procedures that can benefit the health of the animals. Communication through the literacies- reading, writing, and research is essential in order to be a successful veterinarian. </p>
 		</article>
 		<footer>
 		<p>&copy; 2013 [Name goes here]</p>
