--- a/formal2.html
+++ b/formal2.html
@@ -14,7 +14,7 @@
 			<li><a href="index.html">home</a></li>
 			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
-			<li><a href="#">formal <br />research</a></li>
+			<li><a href="formal.html">formal <br />research</a></li>
 			<li><a href="#">remix</a></li>
 			<li><a href="#">course <br />retrospective</a></li>
 			<li><a href="#">blog</a></li>
@@ -23,7 +23,7 @@
 		<div id="menu">
 			<ul>
 				<li><a href="cultural.html">Executive Summary</a></li>
-				<li><a href="cultural2.html">Introduction</a></li>
+				<li><a href="formal2.html">Introduction</a></li>
 				<li><a href="cultural3.html">Analysis of Artifact</a></li>
 				<li><a href="cultural4.html">Description of Issue</a></li>
 				<li><a href="cultural5.html">Proposed Solution</a></li>
