--- a/formal3.html
+++ b/formal3.html
@@ -14,7 +14,7 @@
 			<li><a href="index.html">home</a></li>
 			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
-			<li><a href="#">formal <br />research</a></li>
+			<li><a href="formal.html">formal <br />research</a></li>
 			<li><a href="#">remix</a></li>
 			<li><a href="#">course <br />retrospective</a></li>
 			<li><a href="#">blog</a></li>
@@ -22,18 +22,19 @@
 		</header>
 		<div id="menu">
 			<ul>
-				<li><a href="cultural.html">Executive Summary</a></li>
-				<li><a href="cultural2.html">Introduction</a></li>
-				<li><a href="cultural3.html">Analysis of Artifact</a></li>
-				<li><a href="cultural4.html">Description of Issue</a></li>
-				<li><a href="cultural5.html">Proposed Solution</a></li>
-				<li><a href="cultural6.html">Anticipated Effects</a></li>
-				<li><a href="cultural7.html">Conclusion</a></li>
+				<li><a href="formal.html">Executive Summary</a></li>
+				<li><a href="formal2.html">Introduction</a></li>
+				<li><a href="formal3.html">Writing</a></li>
+				<li><a href="formal4.html">Reading</a></li>
+				<li><a href="formal5.html">Research</a></li>
+				<li><a href="formal6.html">Conclusion</a></li>
 			</ul>
 		</div>
 		<article>
-			<h1>Analysis of Artifact</h1>
-			<p>Analysis of Artifact goes here</p>
+			<h1>Writing</h1>
+			<p>Writing within the veterinary field does not require essays but there is a large amount and importance for the notes, comments, and explanations that is necessary. Veterinarians need to be able to write notes on the medical records of their patients informing anybody who looks at it of previous medical issues and check ups.  On medical records, the writing usually consists of short, to the point sentences but there is sometimes a need for a longer paragraph, which would be if there was an unusual medical issue in which the doctor needs to be detailed about the symptoms of the illness. Longer writing in the field would come when letters are being written to clients, suppliers, or colleagues. These letters would be written in the case of a referral and would include information on the animals’ medical history, their current health issue and the reason behind the referral. Sometimes a veterinarian needs to write an information sheet or brochure for the pet owners that provide information on various treatment options, fees, as well as different ways to keep their animals healthy. As a highly respected veterinarian, it may be possible that news articles and magazines want to have an article written to a bigger audience to explain different medical procedures, or the importance of certain care for an animal. In rare occasions, a research proposal or final reports may be necessary which would provide summaries, research, and results that would be written for something like a scientific journal. The large pieces of writing are only sometimes required as a veterinarian and the majority of the writing that is required goes back to the short sentences that make up notes on an animals medical records. While most of the writing that is necessary for vet is not lengthy, the information that is provided through it is important. The amount of the writing that a veterinarian does is for the purpose of informing, recording, and organizing animal’s medical records. Grass Lake Animal Hospital Veterinarian Ruth Barthel backs this up by saying, “(I do) incredible amounts of writing to keep medical records complete, writing to communicate how to care for surgical patients, or how to deal with allergies in pets, etc. I also lecture to vets on dentistry and have to have good skills in providing concise, informative handouts and power points.” Doctor Barthel confirms that the majority of writing she does when she is working in an actual veterinary office, the writing she does is for the benefit of her patients and does not necessarily require long periods of time. However, she did mention that</p>
+<p>there is a possibility of a veterinarian lecturing on their profession, which would require more writing but this would be in the form of power points and handouts as opposed to long essay style writing. Also, the handouts may require more writing than is needed on a medical record, but the information on those handouts in already known and does not require much, if any, extra research.</p> 
+
 		</article>
 		<footer>
 		<p>&copy; 2013 [Name goes here]</p>
