--- a/formal2.html
+++ b/formal2.html
@@ -22,13 +22,12 @@
 		</header>
 		<div id="menu">
 			<ul>
-				<li><a href="cultural.html">Executive Summary</a></li>
+				<li><a href="formal.html">Executive Summary</a></li>
 				<li><a href="formal2.html">Introduction</a></li>
-				<li><a href="cultural3.html">Analysis of Artifact</a></li>
-				<li><a href="cultural4.html">Description of Issue</a></li>
-				<li><a href="cultural5.html">Proposed Solution</a></li>
-				<li><a href="cultural6.html">Anticipated Effects</a></li>
-				<li><a href="cultural7.html">Conclusion</a></li>
+				<li><a href="formal3.html">Writing</a></li>
+				<li><a href="formal4.html">Reading</a></li>
+				<li><a href="formal5.html">Research</a></li>
+				<li><a href="formal6.html">Conclusion</a></li>
 			</ul>
 		</div>
 		<article>
