--- a/formal4.html
+++ b/formal4.html
@@ -14,7 +14,7 @@
 			<li><a href="index.html">home</a></li>
 			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
-			<li><a href="#">formal <br />research</a></li>
+			<li><a href="formal.html">formal <br />research</a></li>
 			<li><a href="#">remix</a></li>
 			<li><a href="#">course <br />retrospective</a></li>
 			<li><a href="#">blog</a></li>
@@ -22,18 +22,20 @@
 		</header>
 		<div id="menu">
 			<ul>
-				<li><a href="cultural.html">Executive Summary</a></li>
-				<li><a href="cultural2.html">Introduction</a></li>
-				<li><a href="cultural3.html">Analysis of Artifact</a></li>
-				<li><a href="cultural4.html">Description of Issue</a></li>
-				<li><a href="cultural5.html">Proposed Solution</a></li>
-				<li><a href="cultural6.html">Anticipated Effects</a></li>
-				<li><a href="cultural7.html">Conclusion</a></li>
+				<li><a href="formal.html">Executive Summary</a></li>
+				<li><a href="formal2.html">Introduction</a></li>
+				<li><a href="formal3.html">Writing</a></li>
+				<li><a href="formal4.html">Reading</a></li>
+				<li><a href="formal5.html">Research</a></li>
+				<li><a href="formal6.html">Conclusion</a></li>
 			</ul>
 		</div>
 		<article>
-			<h1>Description of Issue</h1>
-			<p>Description of Issue goes here</p>
+			<h1>Reading</h1>
+			<p>The reading material that is needed by a veterinarian corresponds to the writing and is not very complex but is of great importance.  Reading is needed to be able to read things such as notes, labels, and referral letters. A veterinarian needs to be able to look at a label on a medication or vaccination and quickly be able to notice potential risks and side effects that could change from animal to animal. Looking at the notes and comments in an animals medical records is also important to skim and understand after the veterinary technician talks to the owner and writes down what the reasoning behind the visit is. The notes in the medical records can also be helpful to know what previous visits have consisted of, past treatments and to see changes in things such as weight.  In A Survey of Reading, Writing, and Oral Communication skills in North American Veterinary Medical Colleges, “ Reading tasks were categorized according to the veterinarian’s goals for undertaking the reading task and ranged from reading for continuing education to reading for routine veterinary medical information. Veterinarians read for general lifelong learning, for veterinary medical lifelong learning, for client and patient information, and for general veterinary medical information.” (Hendrix, Thompson, and Mann 37). This statement was taken from a survey based on the different types of classes offered to veterinary students as a part of their schooling. Through this survey, it is clear that in the field of veterinary medicine, the majority of reading done is for the veterinarian’s individual interest in learning more about the field. No matter the field of study, reading is good for everyone. As a veterinarian, it is of personal</p> 
+<p>interest to read for the benefit of knowledge in their field. When the survey refers to “veterinary medical lifelong learning,” they are talking about veterinary medical journals, veterinary textbooks, reference books, Internet information as well as conference proceedings as examples of readings that are available for a veterinarian to enhance their knowledge on their own time. The general veterinary medical information that is talked about in the survey refers to instructions, samples, and drug labels as some possible readings in this category. Practice management is referred to as well, which could include things such as legal documents, sales material, or financial guides while the client and patient information could be things such as medical records and referrals.</p>
+	<p>Also in this survey done by Hendrix, Thompson, and Mann, it is said “The classroom based reading / critical thinking activities included problem based and case based learning activities, independent research, and reading of veterinary textbooks. The academic reading/ critical thinking activities included journal articles and books. The veterinary medical/ critical thinking activities detailed by the academic deans included legal opinions, practice management literature books to solve cases and to keep up with practice journals, and information from the Internet” (Hendrix, Thompson, and Mann 36-37). This statement is referring to the types of assignments done by students in veterinary college. The classroom based assignments is talking about ones done more for the purpose to gain knowledge and get a grade from the teacher. The academic activities are done to gain knowledge of the information but also to gain practice in academic communication. Veterinary professional activities are the ones that are more related to the actual working world of veterinarians and are done for knowledge but more for practice.  Through the veterinary professional assignments, the students are learning what types of reading they will see when they are working in a practice as a veterinarian. </p>
+
 		</article>
 		<footer>
 		<p>&copy; 2013 [Name goes here]</p>
