--- a/formal5.html
+++ b/formal5.html
@@ -14,7 +14,7 @@
 			<li><a href="index.html">home</a></li>
 			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
-			<li><a href="#">formal <br />research</a></li>
+			<li><a href="formal.html">formal <br />research</a></li>
 			<li><a href="#">remix</a></li>
 			<li><a href="#">course <br />retrospective</a></li>
 			<li><a href="#">blog</a></li>
@@ -22,18 +22,24 @@
 		</header>
 		<div id="menu">
 			<ul>
-				<li><a href="cultural.html">Executive Summary</a></li>
-				<li><a href="cultural2.html">Introduction</a></li>
-				<li><a href="cultural3.html">Analysis of Artifact</a></li>
-				<li><a href="cultural4.html">Description of Issue</a></li>
-				<li><a href="cultural5.html">Proposed Solution</a></li>
-				<li><a href="cultural6.html">Anticipated Effects</a></li>
-				<li><a href="cultural7.html">Conclusion</a></li>
+				<li><a href="formal.html">Executive Summary</a></li>
+				<li><a href="formal2.html">Introduction</a></li>
+				<li><a href="formal3.html">Writing</a></li>
+				<li><a href="formal4.html">Reading</a></li>
+				<li><a href="formal5.html">Research</a></li>
+				<li><a href="formal6.html">Conclusion</a></li>
 			</ul>
 		</div>
 		<article>
-			<h1>Proposed Solution</h1>
-			<p>Proposed Solution goes here</p>
+			<h1>Research</h1>
+			<p>Most of the research that is done in the veterinary field is done by a specialized group of veterinarians who are the research veterinarians. These types of vets tend to stay more behind the scenes and work in the labs as opposed to working with the animals like a clinical veterinarian would do. As a research veterinarian, someone could work in the lab to study animal diseases and work to find ways to treat them. This type of veterinarian could also test different food brands to find the healthiest options for animals and report back to the veterinarians that actually work with the animas who would then pass that information along to the pet owners.  As a veterinarian who works with the animals in the medical center, there is not any research required on a daily basis. Really, the only necessary research that would need to be done would be finding past medical records for a specific animal or information for personal knowledge within the field. The college of veterinary medicine at Michigan State University is extremely devoted to field research. There are several centers, labs, and offices that focus solely on research. Some examples of the labs that are offered specifically for </p>
+<p>research in the veterinary college are; The Laboratory for Comparative Orthopaedic, Equine Pulmonary Lab, Equine Foot Lab, Immunobiology Lab, Laboratory of Molecular Medicine and Canine Genetics, Molecular Respiratory and Equine Genetics Lab, and the Luyendyk Lab. Besides having multiple labs offered at the college of veterinary medicine, there are research centers that specialize in various fields of veterinary medicine such as; the center for comparative epidemiology, feline health and well-being, food safety and toxicology, integrative toxicology, comparative oncology, equine performance center, and the training center for dairy professionals. The veterinary college also offers a research called the Bernese Mountain Dog DNA and Tissue repository that looks at genetics and diseases that affect this breed of dogs while trying to find ways to help these dogs and others that could have similar diseases. In A Survey of Reading, Writing, and Oral Communication Skills in North American Veterinary Medical Colleges, there was a survey done with twenty-seven veterinary schools across North America, including Michigan State University, to figure out and describe the opportunities for students to practice their reading, writing, and speaking skills- all of which are important as a veterinarian. The research was done to reinforce the importance of communication in the field of veterinary medicine. By conducting this survey, Charles Hendrix, Isabelle Thompson, and Curt Mann show the type of research done within and around the field as well as showing the importance of research within veterinary medicine.</p> 
+
+<p>Along with Hendrix, Thompson, and Mann, the Association of American Veterinary Medicine Colleges and National Academy of Sciences Conduct Veterinary Medicine Needs Study says, “The NAVMEC report also called for resource sharing, greater use of technology, the development of centers of emphasis or excellence, a focus on One Health, and the development of graduates with a broader range of skills and competencies” (Close-Up Media, 1).  The North American Veterinary Medical Education Consortium’s Roadmap (NAVMEC) conducted a survey to look at the workforce needs in veterinary medicine that are unmet that need to be done by the veterinarians in order for them to be relevant to society. Through this survey, it is noted that there needs to be a greater use of technology that would be used for communication throughout the field as well as for research.</p> 
+
+
+<p>“The best thing about being a vet is getting to do what I love every day,” says Barthel. There is a saying that “if you do what you love, you don’t have to work a day of your life.” As a veterinarian, working with animals all day would not be hard to wake up and do everyday. With that said, the pay of a veterinarian is not a down side to the job. In 2011, the average salary of a vet was $83,000 while the best paying professionals were getting close to $142,000 (Veterinarian: Salary). With that said, the average veterinarians are able to provide for themselves stably without having to worry about not being able to pay the bills. The best paying cities for a veterinarian are New Haven, CT, Winter Haven, FL, and Newark, NJ (Veterinarian: Salary). The reasoning behind the good pay is because of a large demand for veterinarians in the area. </p>
+
 		</article>
 		<footer>
 		<p>&copy; 2013 [Name goes here]</p>
