--- a/formal6.html
+++ b/formal6.html
@@ -14,7 +14,7 @@
 			<li><a href="index.html">home</a></li>
 			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
-			<li><a href="#">formal <br />research</a></li>
+			<li><a href="formal.html">formal <br />research</a></li>
 			<li><a href="#">remix</a></li>
 			<li><a href="#">course <br />retrospective</a></li>
 			<li><a href="#">blog</a></li>
@@ -22,18 +22,17 @@
 		</header>
 		<div id="menu">
 			<ul>
-				<li><a href="cultural.html">Executive Summary</a></li>
-				<li><a href="cultural2.html">Introduction</a></li>
-				<li><a href="cultural3.html">Analysis of Artifact</a></li>
-				<li><a href="cultural4.html">Description of Issue</a></li>
-				<li><a href="cultural5.html">Proposed Solution</a></li>
-				<li><a href="cultural6.html">Anticipated Effects</a></li>
-				<li><a href="cultural7.html">Conclusion</a></li>
+				<li><a href="formal.html">Executive Summary</a></li>
+				<li><a href="formal2.html">Introduction</a></li>
+				<li><a href="formal3.html">Writing</a></li>
+				<li><a href="formal4.html">Reading</a></li>
+				<li><a href="formal5.html">Research</a></li>
+				<li><a href="formal6.html">Conclusion</a></li>
 			</ul>
 		</div>
 		<article>
-			<h1>Anticipated Effects</h1>
-			<p>Anticipated Effects go here</p>
+			<h1>Conclusion</h1>
+			<p>Communication through the literacies of reading, writing, and research are essential in order to be a successful veterinarian. This is confirmed by academic advisor Doctor Richard Balander when he says, “(communication is) Essential - both verbal and non verbal for people and pets, to understand where they are coming from, to learn what concerns them, to be able to communicate the need for complex tests that might cost a lot of money.” When Balander says this, he is referring to some, but not all, of the ways a veterinarian needs to be able to talk to the owners of their patients as well as being able to understand what the animal is saying through their actions. It is also necessary for the veterinarian to be able to talk to the animal and make them feel comfortable with being at the doctor. </p>
 		</article>
 		<footer>
 		<p>&copy; 2013 [Name goes here]</p>
