--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
 		</ul>
 	</header>
 	<main></h1>In Class Activities</h1>
-		<p>The purpose of the video was to show that there are people that care about you whether you know it or not and suicide is never the answer no matter how bad things are because there are people that support you- things will get better even though there may seem like no other way out at the time.</p> 
+		<p> 9/12/13: The purpose of the video was to show that there are people that care about you whether you know it or not and suicide is never the answer no matter how bad things are because there are people that support you- things will get better even though there may seem like no other way out at the time.</p> 
 
 <p>The video attempts to achieve its purpose by having the author of the letter, who has a first-hand experience to the situation, talk on screen which adds emotion to the video and kind of makes the audience feel bad, think and listen more.</p> 
 
