--- a/cultural.html
+++ b/cultural.html
@@ -36,7 +36,7 @@
 			<p>Gay marriage has become an overly popular subject throughout society over the last decade. Unfortunately, many people view it as a negative and the country cannot come to terms on whether it should be legalized or not. Some states in the United States have voted to legalize gay marriage but there are still many who have not which causes the marriage to not be recognized by the federal government. By legalizing gay marriages all throughout the country, acceptance of homosexuals would increase and there would be less suicides and self-harm because of targeting of this minority. </p>
 		</article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 Sarah</p>
 		</footer>
 	</content>
 </body>	
