--- a/cultural2.html
+++ b/cultural2.html
@@ -14,9 +14,9 @@
 			<li><a href="index.html">home</a></li>
 			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
-			<li><a href="#">formal <br />research</a></li>
-			<li><a href="#">remix</a></li>
-			<li><a href="#">course <br />retrospective</a></li>
+			<li><a href="formal.html">formal <br />research</a></li>
+			<li><a href="remix.html">remix</a></li>
+			<li><a href="course.html">course <br />retrospective</a></li>
 			<li><a href="blog.html">blog</a></li>
 		</ul>
 		</header>
@@ -36,7 +36,7 @@
 			<p>There are many varying feelings regarding gay rights. Some people believe that gay marriage should not be allowed, some believe that there is no reason why it shouldn’t, and there are feelings in between. Music rap artist Ben Haggerty, more commonly known as Macklemore, shows that he believes love is love and that there is nothing wrong with gay marriage in the music video of his hit single “Same Love,” featuring Ryan Lewis. Since the 1970’s issues regarding same sex marriage have been public. While the issue became known over forty years ago, the 21st century has brought more attention to the subject and more same sex couples have gone public (“Background”). Many different things affect the views on gay marriage. People may take a certain stance on the subject because of demographic groups, religious views, gender, or race. Since allowing gay marriage does not affect society and America prides itself on equality, the best way to solve the issue on gay marriage is to make it legal throughout the country and not just in certain states. </p>
 		</article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 Sarah</p>
 		</footer>
 	</content>
 </body>	
