--- a/cultural7.html
+++ b/cultural7.html
@@ -14,9 +14,9 @@
 			<li><a href="index.html">home</a></li>
 			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
-			<li><a href="#">formal <br />research</a></li>
-			<li><a href="#">remix</a></li>
-			<li><a href="#">course <br />retrospective</a></li>
+			<li><a href="formal.html">formal <br />research</a></li>
+			<li><a href="remix.html">remix</a></li>
+			<li><a href="course.html">course <br />retrospective</a></li>
 			<li><a href="blog.html">blog</a></li>
 		</ul>
 		</header>
@@ -36,7 +36,7 @@
 			<p>While gay couples have negatively been an ongoing topic of talk throughout the last few years, it is slowly but surely becoming more socially acceptable to the public. The struggles some gay individuals go through on a daily basis of not being able to be themselves because it is looked at as being bad by society. In Macklemore’s music video for his hit song “Same Love,” he shows some of the struggles of finding oneself while also showing his approval for gay marriage and gay rights. When a popular rap artist creates a song and stands up for something that is a big social issue, it tends to bring a more positive outlook on the issue to the younger fans. Having gay individuals be the most common target for hate crimes, America should take advantage of the opportunity to have such an easy fix to decrease suicides and depression among its citizens. By legalizing gay marriage in all fifty states in America, hate crimes will go down and having songs like “Same Love” will not be such a big controversy to society when they become hits.</p>
 		</article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 Sarah</p>
 		</footer>
 	</content>
 </body>	
