--- a/formal.html
+++ b/formal.html
@@ -15,9 +15,9 @@
                         <li><a href="lived.html">lived <br />experiences</a></li>
                         <li><a href="cultural.html">cultural <br />analysis</a></li>
                         <li><a href="formal.html">formal <br />research</a></li>
-                        <li><a href="#">remix</a></li>
-                        <li><a href="#">course <br />retrospective</a></li>
-                        <li><a href="#">blog</a></li>
+                        <li><a href="remix.html">remix</a></li>
+                        <li><a href="course.html">course <br />retrospective</a></li>
+                        <li><a href="blog.html">blog</a></li>
                 </ul>
                 </header>
                 <div id="menu">
@@ -35,7 +35,7 @@
                         <p>A veterinarian must major in animal science before they are able to go on to veterinary college. Like any other student, there is reading, writing, and research that need to be done in order to pass classes. However, when the students graduate from veterinary school and have a job working in a practice, whether it is their own or with someone else, there is still some use of these literacies. This paper is going to explore the amounts of writing, reading, and research that are used when a veterinarian goes through their daily routines. </p>
                 </article>
                 <footer>
-                <p>&copy; 2013 [Name goes here]</p>
+                <p>&copy; 2013 Sarah</p>
                 </footer>
         </content>
 </body>    
