--- a/formal5.html
+++ b/formal5.html
@@ -15,9 +15,9 @@
 			<li><a href="lived.html">lived <br />experiences</a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
 			<li><a href="formal.html">formal <br />research</a></li>
-			<li><a href="#">remix</a></li>
-			<li><a href="#">course <br />retrospective</a></li>
-			<li><a href="#">blog</a></li>
+			<li><a href="remix.html">remix</a></li>
+			<li><a href="course.html">course <br />retrospective</a></li>
+			<li><a href="blog.html">blog</a></li>
 		</ul>
 		</header>
 		<div id="menu">
@@ -42,7 +42,7 @@
 
 		</article>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 Sarah</p>
 		</footer>
 	</content>
 </body>	
