--- a/lived.html
+++ b/lived.html
@@ -13,9 +13,9 @@
 			<li><a href="index.html">home</a></li>
 			<li><a href="lived.html">lived <br />experiences</br></a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
-			<li><a href="#">formal <br />research</a></li>
-			<li><a href="#">remix</a></li>
-			<li><a href="#">course <br />retrospective</a></li>
+			<li><a href="formal.html">formal <br />research</a></li>
+			<li><a href="remix.html">remix</a></li>
+			<li><a href="course.html">course <br />retrospective</a></li>
 			<li><a href="blog.html">blog</a></li>
 		</ul>
 	</header>
@@ -31,5 +31,5 @@
 
 	</main>
 	<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 Sarah</p>
 	</footer>
