--- a/blog.html
+++ b/blog.html
@@ -14,8 +14,8 @@
 			<li><a href="lived.html">lived <br />experiences</br></a></li>
 			<li><a href="cultural.html">cultural <br />analysis</a></li>
 			<li><a href="formal.html">formal <br />research</a></li>
-			<li><a href="#">remix</a></li>
-			<li><a href="#">course <br />retrospective</a></li>
+			<li><a href="remix.html">remix</a></li>
+			<li><a href="course.html">course <br />retrospective</a></li>
 			<li><a href="blog.html">blog</a></li>
 		</ul>
 	</header>
@@ -39,5 +39,5 @@
 
 	</main>
 	<footer>
-		<p>&copy; 2013 Sarah Gutknecht</p>
+		<p>&copy; 2013 Sarah </p>
 	</footer>
